---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Fixed a migration crash (#433)
    - Fixed putting offshore pumps into the cursor would crash (#438)
    - Fixed a crash when hovering a compact dialog ingredient while on a subfloor (#439)

---------------------------------------------------------------------------------------------------
Version: 2.0.16
Date: 26. 11. 2024
  Bugfixes:
    - Fixed a startup crash (#428)
    - Fixed a migration issue with the previous release (#431)

---------------------------------------------------------------------------------------------------
Version: 2.0.15
Date: 26. 11. 2024
  Features:
    - Added a toggle to view factory ingredients in the compact view (#180)
    - The belt throughput display option now shows pump throughput for fluids (#411)
  Changes:
    - Several actions now close the District view when it's open, for more intuitive use of the UI (#379)
    - Moved the 'fold out subfloors' preference to a toggle button in the main UI (#299)
    - Machines/fuels/beacons are now guaranteed to have sensible, low-level defaults
  Bugfixes:
    - Fixed that copy/pasting a machine didn't bring along its fuel and modules (#424)
    - Fixed a crash when trying to put an item into the cursor (#426)
    - Fixed that catalysts weren't being shown in the compact dialog

---------------------------------------------------------------------------------------------------
Version: 2.0.14
Date: 23. 11. 2024
  Features:
    - Added a preference to change the width of the compact dialog
    - Added context menu actions to shift factory products left and right
    - Added a context menu action on fuels to edit them
  Changes:
    - Putting simple machines into the cursor now makes them a ghost instead of a blueprint (#387)
    - All item lists (like on recipes) are now sorted by item type and amount